Changed the scss because notification page is now correctly wrapped in an ion page component

--- a/frontend/carpool-app/src/pages/NotificationPage.scss
+++ b/frontend/carpool-app/src/pages/NotificationPage.scss
@@ -1,9 +1,12 @@
-ion-card {
-    ion-card-content{
-        .trip-display-container{
-            background-color: transparent;
-            *{
-                font-size: 0.95rem;
+.ion-page{
+
+    ion-card {
+        ion-card-content{
+            .trip-display-container{
+                background-color: transparent;
+                *{
+                    font-size: 0.95rem;
+                }
             }
         }
     }
